@@ -13,7 +13,12 @@ import pl.asie.endernet.block.TileEntityEnderChatBox;
 import pl.asie.endernet.lib.EnderRegistry;
 import pl.asie.endernet.lib.EntityCoord;
 import pl.asie.endernet.lib.FileUtils;
+import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.ChatMessageComponent;
+import net.minecraft.util.EnumChatFormatting;
+import net.minecraft.world.WorldServer;
 import net.minecraftforge.common.DimensionManager;
 import net.minecraftforge.event.ForgeSubscribe;
 import net.minecraftforge.event.ServerChatEvent;
@@ -54,15 +59,46 @@ public class EventHandler {
 	
 	@ForgeSubscribe
 	public void chatEvent(ServerChatEvent event) {
+		if(EnderNet.CHAT_RADIUS < 0) { // Chat disabled altogether
+			event.setCanceled(true);
+			return;
+		}
 		if(EnderNet.HEARING_DISTANCE == 0) return;
 		int dim = event.player.worldObj.provider.dimensionId;
 		for(EntityCoord ec: EnderNet.registry.entities) {
 			if(dim != ec.dimensionID) continue;
 			int distance = (int)Math.round(event.player.getDistance(ec.x, ec.y, ec.z));
-			if(distance > EnderNet.SPEAKING_DISTANCE) continue;
+			if(distance > EnderNet.HEARING_DISTANCE) continue;
 			TileEntity te = event.player.worldObj.getBlockTileEntity(ec.x, ec.y, ec.z);
 			if(!(te instanceof TileEntityEnderChatBox)) continue;
 			((TileEntityEnderChatBox)te).receiveChatMessage(event.username, event.message);
+		}
+		if(EnderNet.CHAT_RADIUS > 0) { // Chat radius
+			event.setCanceled(true);
+			ChatMessageComponent chat = new ChatMessageComponent();
+			if(event.message.startsWith("!") && EnderNet.shoutEnabled) {
+				chat.addText(EnumChatFormatting.YELLOW + "[Shout] " + EnumChatFormatting.RESET + "<" + event.username +
+						"> " + event.message.substring(1));
+				for(WorldServer ws: MinecraftServer.getServer().worldServers) {
+					for(Object o: ws.playerEntities) {
+						if(o instanceof EntityPlayer)
+							((EntityPlayer)o).sendChatToPlayer(chat);
+					}
+				}
+			} else {
+				chat.addText("<" + event.username + "> " + event.message);
+				for(WorldServer ws: MinecraftServer.getServer().worldServers) {
+					if(ws.provider.dimensionId != dim) continue;
+					for(Object o: ws.playerEntities) {
+						if(o instanceof EntityPlayer) {
+							EntityPlayer target = (EntityPlayer)o;
+							if(event.player == target || event.player.getDistanceToEntity(target) <= EnderNet.CHAT_RADIUS) {
+								target.sendChatToPlayer(chat);
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
